k8s/eduroom-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eduroom-backend-deployment
spec:
  selector:
    matchLabels:
      app: eduroom-backend-deployment
  template:
    metadata:
      labels:
        app: eduroom-backend-deployment
    spec:
      volumes:
        - name: pg-cloud-sql-sa
          secret:
            secretName: pg-cloud-sql-service-account
      containers:
      - name: cloud-sql-proxy-deployment
        image: gcr.io/cloudsql-docker/gce-proxy:1.17
        command:
          - "/cloud_sql_proxy"
          - "-instances=macbigduck:asia-southeast1:eduroom-postgres=tcp:5432"
          - "-credential_file=/secrets/service_account.json"
        securityContext:
          runAsNonRoot: true
        volumeMounts:
            - name: pg-cloud-sql-sa
              mountPath: /secrets/
              readOnly: true
      - name: eduroom-backend-deployment
        image: asia.gcr.io/macbigduck/eduroom-backend
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 5000
