k8s/eduroom-socket-chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eduroom-socket-chat-deployment
spec:
  selector:
    matchLabels:
      app: eduroom-socket-chat-deployment
  template:
    metadata:
      labels:
        app: eduroom-socket-chat-deployment
    spec:
      restartPolicy: Always
      containers:
      - name: eduroom-socket-chat-deployment
        image: asia.gcr.io/macbigduck/eduroom-socket-chat
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 5050
