k8s/eduroom-backend-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: eduroom-backend-clusterip
spec:
  type: ClusterIP
  selector:
    app: eduroom-backend-deployment
  ports:
  - port: 5000
    targetPort: 5000
