k8s/eduroom-frontend-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: eduroom-frontend-clusterip
spec:
  type: ClusterIP
  selector:
    app: eduroom-frontend-deployment
  ports:
  - port: 3000
    targetPort: 3000
