k8s/eduroom-grading-server-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: eduroom-grading-server-clusterip
spec:
  type: NodePort
  selector:
    app: eduroom-grading-server-deployment
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30000
