k8s/eduroom-socket-chat-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: eduroom-socket-chat-clusterip
spec:
  type: ClusterIP
  selector:
    app: eduroom-socket-chat-deployment
  ports:
  - port: 5050
    targetPort: 5050
