k8s/eduroom-socket-kahoot-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: eduroom-socket-kahoot-clusterip
spec:
  type: ClusterIP
  selector:
    app: eduroom-socket-kahoot-deployment
  ports:
  - port: 8000
    targetPort: 8000
