k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
      - eduroom.cscms.me
      secretName: eduroom-cscms-cf
    - hosts:
      - lhci.cscms.me
      secretName: lhci-cscms-me-tls
  rules:
    - host: lhci.cscms.me
      http:
        paths:
          - path: /
            backend:
              serviceName: lhci-server-clusterip
              servicePort: 9001
    - host: eduroom.cscms.me
      http:
        paths:
          - path: /socket-chat/
            backend:
              serviceName: eduroom-socket-chat-clusterip
              servicePort: 5050
          - path: /kahoot/
            backend:
              serviceName: eduroom-socket-kahoot-clusterip
              servicePort: 8000
          - path: /grader/
            backend:
              serviceName: eduroom-grading-server-clusterip
              servicePort: 3050
          - path: /api/
            backend:
              serviceName: eduroom-backend-clusterip
              servicePort: 5000
          - path: /
            backend:
              serviceName: eduroom-frontend-clusterip
              servicePort: 3000
